# zero2prod

./: .env  .travis.yml  Cargo.toml  Dockerfile  configuration.yml
.github/workflows/: general.yml
nvim-osx64/libs/: CoreServices
nvim-osx64/share/nvim/runtime/doc/: tags
nvim-osx64/share/nvim/runtime/syntax/vim/: generated.vim
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
