[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jose Gotuzzo <gotuzzoj23gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version ="1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
secrecy = {version = "0.8", features = ["serde"]}

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"


# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]